Actions
Bug #2042
closedblkdev should not discard bd->d_maxxfer
Start date:
2012-01-28
Due date:
% Done:
0%
Estimated time:
Difficulty:
Bite-size
Tags:
needs-triage
Gerrit CR:
Description
blkdev calculates bd->d_maxxfer parameter based on the user's dma attrs, or hard-codes it to 1M in case DMA is not used. Then it just discards the value, and uses whatever the user set in bd->d_ops.o_drive_info().
Fix: Only use the user's supplied drive.d_maxxfer as an upper bound for bd->d_maxxfer. Also, ignore it if it's zero (the user did not set it).
Updated by Alexey Zaytsev almost 10 years ago
- Subject changed from blkdev should not discard bd->d_maxxfer. to blkdev should not discard bd->d_maxxfer
Updated by Alexey Zaytsev almost 10 years ago
- Status changed from New to Resolved
Actions